# handoff-eval

./: .gitignore  Makefile  README.md  data_preparation.py  eda.py  evaluation.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  similarity.py
handoff_eval/: __init__.py  constants.py  data_preparation.py  evaluation.py  logger.py  openai_client.py  similarity.py  utils.py
notebooks/: eda.ipynb  evaluation.ipynb
tests/: test_similarity.py
