[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff_eval"
version = "0.1.0"
description = "A Python library for handoff LLM evaluation"
readme = "README.md"
authors = [{ name = "krzischp", email = "pierre.krzisch@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
